Bug 392235 - Cannot re-enable locked but hidden dockers
Summary: Cannot re-enable locked but hidden dockers
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Dockers (other bugs)
Version First Reported In: 4.0
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-23 15:07 UTC by Autumn Lansing
Modified: 2018-04-03 11:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Autumn Lansing 2018-03-23 15:07:53 UTC
With 4.0.0. the Palette docker is missing. It shows up in the menu under Settings > Dockers, but it's unchecked and grayed out so that I can't check it again. Several other entries are actually grayed out as well: the Advanced Color Selector, Layers, and Brush Presets, but they're checked and show up in the dock thankfully. I can bring up the Python Palette Docker to use so I'm not without a palette, but it's a bit annoying as it seems to randomly select a different palette each time I start Krita.

I'm using the Appimage in Fedora 27.
Comment 1 Alvin Wong 2018-03-23 15:20:26 UTC
I think that happens when you locked a docker and somehow managed to close it/make it hidden. There seems to be no way to simply re-enable it or toggle its visibility.

You can try switching workspaces and find a workspace with the docker visible and then unlock it though. Another way would be to edit the kritarc file and replace `Locked=true` with `Locked=false` under all the docker sections

(For those dockers that are still visible but greyed out in the menu, click on the lock icon on the title bar of the docker to unlock it.)

I would suggest to implement a function to unlock all the dockers to prevent users from getting stuck in this situation.
Comment 2 Autumn Lansing 2018-03-23 15:37:14 UTC
Ah, yes. I was able to unlock it through another workspace and realized that the official release had started me in a different workspace than I normally use. There was no visual information to make me think that though, and the beta version had not done it, hence my confusion.

Yes, an emergency unlocking mechanism might be helpful.
Comment 3 Halla Rempt 2018-03-28 13:40:11 UTC
Git commit 52c0f20f60afe97568609bb161170bae98757aa2 by Boudewijn Rempt.
Committed on 28/03/2018 at 13:39.
Pushed by rempt into branch 'master'.

On switching a workspace unlock all dockers

The workspace selector widget tried to restore the lock status
after changing a workspace for all visible dockers, the workspace
menu didn't do that. In any case, it is far too easy to lock
invisible dockers, and that confuses far too many people and takes
far too much of our time to explain.

Tt is better to define that changing a workspace will reset the
lockedness of all dockers. The lock property of a docker is not
part of the workspace.
CCMAIL:kimageshop@kde.org

Maybe we should remove the lock and collapse feature for dockers
altogether.

M  +1    -1    libs/ui/KisApplication.cpp
M  +12   -7    libs/ui/KisMainWindow.cpp
M  +3    -3    libs/ui/KisMainWindow.h
M  +1    -20   libs/ui/widgets/kis_workspace_chooser.cpp

https://commits.kde.org/krita/52c0f20f60afe97568609bb161170bae98757aa2
Comment 4 Halla Rempt 2018-04-03 11:47:01 UTC
Git commit b5e64be625958ca359dbc0f9935a91fff6f090b0 by Boudewijn Rempt.
Committed on 03/04/2018 at 11:18.
Pushed by rempt into branch 'krita/4.0'.

On switching a workspace unlock all dockers

The workspace selector widget tried to restore the lock status
after changing a workspace for all visible dockers, the workspace
menu didn't do that. In any case, it is far too easy to lock
invisible dockers, and that confuses far too many people and takes
far too much of our time to explain.

Tt is better to define that changing a workspace will reset the
lockedness of all dockers. The lock property of a docker is not
part of the workspace.
CCMAIL:kimageshop@kde.org

Maybe we should remove the lock and collapse feature for dockers
altogether.

(cherry picked from commit 52c0f20f60afe97568609bb161170bae98757aa2)

M  +1    -1    libs/ui/KisApplication.cpp
M  +12   -7    libs/ui/KisMainWindow.cpp
M  +3    -3    libs/ui/KisMainWindow.h
M  +1    -20   libs/ui/widgets/kis_workspace_chooser.cpp

https://commits.kde.org/krita/b5e64be625958ca359dbc0f9935a91fff6f090b0